Version 2.3 - Fix sticky bar, but broken in sarafi, partially work in firefox

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,7 @@
 .wrapper{
   display: grid;
   grid-template-columns: 7fr 3fr;
+  z-index: 0;
 }
 
 .timelineContainer{
